--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ buildNumber.properties
 .idea/
 .mvn/
 # End of https://www.toptal.com/developers/gitignore/api/maven,java-web
+
+src/main/resources/application.properties
