--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ buildNumber.properties
 # End of https://www.toptal.com/developers/gitignore/api/maven,java-web
 
 src/main/resources/application.properties
+
+editing_together_api.iml
